# python-discord-bot

./: .gitignore  Pipfile  pyproject.toml  pyrightconfig.json
notorious_discord_bot/: main.py
notorious_discord_bot/cogs/music/: lava_music.py  music.py  song.py  voice.py  voice_state.py  ytdl_helper.py  ytdl_source.py
notorious_discord_bot/cogs/music/util/: song.py  voice_state.py  ytdl_source.py
