[tool.poetry]
name = "python-discord-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_discord_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.4.1"
loguru = "^0.7.0"
Wavelink = "^2.3.1"
python-dotenv = "*"
pynacl = "*"
watchpoints = "*"
wavelink = "*" 
youtube-dl = "^2021.12.17"


[tool.poetry.group.dev.dependencies]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
